# REGoth-bs

ForTests/original-content/: CMakeLists.txt  Tests.cpp
src/: CMakeLists.txt  main_WorldViewer.cpp
src/original-content/: OriginalGameFiles.cpp
